prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/continue_in_codeblock.diag.txt
ERROR: 'continue' has to be in a loop block
testData/diagnostics/continue_in_codeblock.nut:3:2

let x = $${
  continue
  ^-------
  return 1


